Create container for Flask web server
Flask runs inside its own container. For now only implement
barebone app with no functionality, this will be changed in the
following commits.
Computer programs keep surprinsing me. I guess that'll never change.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,12 @@ services:
       - "grafana-db:/var/lib/grafana"
       - "./grafana_config.ini:/etc/grafana/grafana.ini"
     restart: always
+  web_server:
+    build: ./web_server
+    volumes:
+      - "./web_server:/usr/src/app"
+    ports:
+      - "5001:5001"
 volumes:
   influx-db:
   grafana-db:
