Implement the webserver functionality
The webserver looks terrrible for now and hasn't been tested yet
with compose - it'll have to be transfered somewhere else to test.

--- a/web_server/Dockerfile
+++ b/web_server/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.10.4-alpine3.15
 COPY app.py /usr/src/app/app.py
+COPY set_iframes /usr/local/bin
 WORKDIR /usr/src/app
 
-# for debugging only - REMOVE (or at leas comment out) for deployment
+# for debugging only - REMOVE (or at least comment out) for deployment
 #RUN apk add --no-cache bash coreutils grep sed
 
-RUN pip install --no-cache-dir -U flask
-CMD ["python", "app.py"]
-
+RUN pip install --no-cache-dir -U flask waitress
+ENTRYPOINT ["python"]
+CMD ["app.py"]
