--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
   web_server:
     build: ./web_server
     volumes:
-      - "./web_server:/usr/src/app"
+      - "web_server:/usr/src/app"
     ports:
       - "5001:5001"
+    restart: always
 volumes:
   influx-db:
   grafana-db:
+  web_server:
