Change volume mount directory
This little detail drove me crazy, it was causing issues that I
wasn't able to explain, they felt impossible. Anyways, it's fixed
now, mounting storage to app's main directory is not a good idea
after all...

--- a/web_server/Dockerfile
+++ b/web_server/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10.4-alpine3.15
 COPY app.py /usr/src/app/app.py
 COPY set_iframes /usr/local/bin
+COPY templates /usr/src/app/templates
 WORKDIR /usr/src/app
 
 # for debugging only - REMOVE (or at least comment out) for deployment
