--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   web_server:
     build: ./web_server
     volumes:
-      - "web_server:/usr/src/app"
+      - "web_server:/usr/src/app/data"
     ports:
       - "5001:5001"
     restart: always
